--- a/assets/css/global.sass
+++ b/assets/css/global.sass
@@ -108,6 +108,10 @@ a
 .tablet-header
   display: none
 
+// .scroll-box
+//   height: 6000px
+//   overflow: scroll
+
 @media (max-width: 900px)
   .tablet-header
     display: block
