--- a/views/case-studies/short-form/problem.haml
+++ b/views/case-studies/short-form/problem.haml
@@ -14,27 +14,27 @@
             .twelve.columns.split-40-60
 
               .chat-block
-                .highlight.highlight-blue.triangle-border.left
-                  %p.brand Tanjun:
+                .highlight.highlight-blue.triangle-border.left.chat-1-1.chat-left
+                  %p.brand.tanjun-blue Tanjun:
                   %p.chat It’s tough isn’t it!!!
-                .highlight.highlight-pink.triangle-border.right
-                  %p.brand Brand:
+                .highlight.highlight-pink.triangle-border.right.chat-1-2.chat-right.raised
+                  %p.brand.brand-pixel Brand:
                   %p.chat Yes it is. The ever lurching to the right of British politics and growing disparities in wealth and inequality with some of the most vulnerable people in our society being left behind and forgotten. Yes! It is tough!
 
               .chat-block
-                .highlight.highlight-blue.triangle-border.left
-                  %p.brand Tanjun:
+                .highlight.highlight-blue.triangle-border.left.chat-1-3.chat-left
+                  %p.brand.tanjun-blue Tanjun:
                   %p.chat Nah not that!! Who cares about that!!
-                .highlight.highlight-pink.triangle-border.right
-                  %p.brand Brand:
+                .highlight.highlight-pink.triangle-border.right.chat-1-4.chat-right.raised
+                  %p.brand.brand-pixel Brand:
                   %p.chat Oh ok!
 
               .chat-block
-                .highlight.highlight-blue.triangle-border.left
-                  %p.brand Tanjun:
+                .highlight.highlight-blue.triangle-border.left.chat-1-5.chat-left
+                  %p.brand.tanjun-blue Tanjun:
                   %p.chat We mean, content...making stuff...all of the time! It’s a ball ache right! And expensive?
-                .highlight.highlight-pink.triangle-border.right
-                  %p.brand Brand:
+                .highlight.highlight-pink.triangle-border.right.chat-1-6.chat-right.raised
+                  %p.brand.brand-pixel Brand:
                   %p.chat Yep! We’re not just brands anymore, we’re broadcasters and entertainers. And to do that we need to be creating stuff! Consistently creating stuff! If not, then we’re no longer relevant!
 .section
   .sub-section
@@ -46,32 +46,32 @@
             .twelve.columns.split-60-40
 
               .chat-block
-                .highlight.highlight-blue.triangle-border.left
-                  %p.brand Tanjun:
+                .highlight.highlight-blue.triangle-border.left.chat-2-1.chat-left-2
+                  %p.brand.tanjun-blue Tanjun:
                   %p.chat Exactly! And unless you have a budget the size of a Russian oligarch’s ‘pension fund’, what can you do?
-                .highlight.highlight-pink.triangle-border.right
-                  %p.brand Brand:
+                .highlight.highlight-pink.triangle-border.right.chat-2-2.chat-right-2.raised
+                  %p.brand.brand-pixel Brand:
                   %p.chat Nothing!! We can do nothing but accept our inevitable and impending doom!!
 
               .chat-block
-                .highlight.highlight-blue.triangle-border.left
-                  %p.brand Tanjun:
+                .highlight.highlight-blue.triangle-border.left.chat-2-3.chat-left-2
+                  %p.brand.tanjun-blue Tanjun:
                   %p.chat Well one thing you can do! Is to create short form content.
-                .highlight.highlight-pink.triangle-border.right
-                  %p.brand Brand:
+                .highlight.highlight-pink.triangle-border.right.chat-2-4.chat-right-2.raised
+                  %p.brand.brand-pixel Brand:
                   %p.chat  But isn’t that a bit rubbish? It’s like proper content but not as good? Shorter in fact?
 
               .chat-block
-                .highlight.highlight-blue.triangle-border.left
-                  %p.brand Tanjun:
+                .highlight.highlight-blue.triangle-border.left.chat-2-5.chat-left-2
+                  %p.brand.tanjun-blue Tanjun:
                   %p.chat It’s actually insanely effective when done well. Can be amazingly cost effective. Allows you to be more reactive and it also can be some of the most creative content executions you’ll get to produce.
-                .highlight.highlight-pink.triangle-border.right
-                  %p.brand Brand:
+                .highlight.highlight-pink.triangle-border.right.chat-2-6.chat-right-2
+                  %p.brand.brand-pixel Brand:
                   %p.chat  Well smoke me a kipper, I'll be back for breakfast!!!
 
               .chat-block
-                .highlight.highlight-blue.triangle-border.left
-                  %p.brand Tanjun:
+                .highlight.highlight-blue.triangle-border.left.chat-2-7.chat-left-2
+                  %p.brand.tanjun-blue Tanjun:
                   %p.chat Exactly! We think you should make a shed load! And if you want. We can make some for you! Here’s some of the short form stuff we’ve made. Take a look!
 
 
