--- a/assets/css/problem.sass
+++ b/assets/css/problem.sass
@@ -7,6 +7,14 @@
   .single
     margin-left: 76%
 
+.split-25-75
+  .highlight-blue
+    width: 70%
+  .highlight-pink
+    width: 24%
+    margin-left: 5%
+  .single
+    margin-left: 76%
 
 .split-50-50
   .highlight-blue
@@ -75,9 +83,19 @@
     background: url("img/case-studies/lottery-pixel.png")
     background-size: 100%
 
+.tanjun-blue
+  &:before
+    background: url("img/case-studies/tanjun-pixel-blue.png")
+    background-size: 100%
+
 .tanjun
   &:before
     background: url("img/case-studies/tanjun-pixel.png")
+    background-size: 100%
+
+.brand-pixel
+  &:before
+    background: url("img/case-studies/brand-pixel.png")
     background-size: 100%
 
 .tri
