--- a/views/case-studies/big-and-bold/video.haml
+++ b/views/case-studies/big-and-bold/video.haml
@@ -7,7 +7,8 @@
     %p Play!
 
   .overlay
-  %video#vid{:loop => "", :muted => "", :preload => "none", :playsinline => ""}
+  %video#vid{:loop => "", :muted => "", :preload => "none", :playsinline => "", :poster => "https://s3.eu-west-2.amazonaws.com/tanjun/case-studies/big-and-bold/hero.jpg"}
     %source#mp4{:src => "https://s3.eu-west-2.amazonaws.com/tanjun/case-studies/big-and-bold/reel.mp4",      :type => "video/mp4"}
       %source#webm{:src => "https://s3.eu-west-2.amazonaws.com/tanjun/case-studies/big-and-bold/reel.webm",  :type => "video/webm"}
         %source{:src => "https://s3.eu-west-2.amazonaws.com/tanjun/case-studies/big-and-bold/reel.ogv",      :type => "video/ogg"}
+          %img{:scr => "https://s3.eu-west-2.amazonaws.com/tanjun/case-studies/big-and-bold/hero.jpg"}
