Short form problem

--- a/assets/css/global.sass
+++ b/assets/css/global.sass
@@ -1,6 +1,12 @@
 *
   box-sizing: border-box
 
+#fp-nav ul li a span
+  background: $blue
+
+#fp-nav ul li .fp-tooltip
+  color: $blue
+
 .hidden
   display: none
 
