--- a/assets/css/font.sass
+++ b/assets/css/font.sass
@@ -87,11 +87,11 @@ a
   p
     text-align: center
     font-family: 'Feature'
-    font-size: 0.8em
+    font-size: 1em
     letter-spacing: 0.1em
 
   h5
-    font-size: 3em
+    font-size: 4em
     font-family: 'Feature'
     text-align: center
     letter-spacing: 0.02em
@@ -156,7 +156,12 @@ a
   .button
     font-size: 1.1em
 
+  .result-block
+    p
+      font-size: 0.8em
 
+    h5
+      font-size: 3em
 @media (max-width: 1700px)
 
   h1
@@ -186,6 +191,10 @@ a
 
 @media (max-width: 1300px)
 
+  .result-block
+    p
+      font-size: 0.7em
+
   .quote-long
     font-size:  1.3em
 
@@ -214,13 +223,14 @@ a
     p
       font-size: 3.3em
 
-@media (max-width: 1000px)
+@media (max-width: 1100px)
   .result-block
     p
-      font-size: 0.7em
+      font-size: 0.6em
 
     h5
       font-size: 2em
+
 
 @media (max-width: 900px)
 
@@ -265,7 +275,7 @@ a
 @media (max-width: 650px)
   .result-block
     p
-      font-size: 0.8em
+      font-size: 0.6em
 
 @media (max-width: 550px)
 
@@ -284,9 +294,9 @@ a
 
   .result-block
     p
-      font-size: 0.6em
+      font-size: 0.4em
 
     h5
-      font-size: 1.6em
+      font-size: 1.5em
 
 
