--- a/views/case-studies/digital-influencer/result.haml
+++ b/views/case-studies/digital-influencer/result.haml
@@ -13,20 +13,21 @@
           .row
             .result-block.blue
               .result
-                %h5 xx
+                %h5 1m
                 %p Views
             .result-block.white
               .result
-                %h5 xx
-                %p Engagement
+                %h5 250k
+                %p
+                  Snap Chat
+                  %br views
             .result-block.blue
               .result
-                %h5 xx
+                %h5 1k
                 %p
-                  No. of
-                  %br content
+                  Retweets
             .result-block.white
               .result
-                %h5 xx
-                %p Reach
+                %h5 12k
+                %p Engagement
 
