--- a/views/case-studies/digital-strategy/result.haml
+++ b/views/case-studies/digital-strategy/result.haml
@@ -13,21 +13,24 @@
           .row
             .result-block.blue
               .result
-                %h5 XX
-                %p
-                  Youtube
-                  %br Views
+                %h5 80k
+                %p Views
             .result-block.white
               .result
-                %h5 XX
+                %h5 2%
                 %p
-                  Facebook
-                  %br Views
+                  Engagement
+                  %br Increase
             .result-block.blue
               .result
-                %h5 XX
-                %p Likes
-            .result-block.blue
+                %h5 15%
+                %p
+                  Followers
+                  %br Increase
+            .result-block.white
               .result
-                %h5 XX
-                %p Likes
+                %h5 5%
+                %p
+                  Website Traffic
+                  %br Increase
+
