--- a/views/case-studies/small-and-nimble/result.haml
+++ b/views/case-studies/small-and-nimble/result.haml
@@ -13,26 +13,26 @@
           .row
             .result-block.blue
               .result
-                %h5 2m
+                %h5 6%
                 %p
-                  Views
-                  %br BBC Two
-            .result-block.white
-              .result
-                %h5 4k
-                %p
-                  Short Form
-                  %br Views
-            .result-block.blue
-              .result
-                %h5 146k
-                %p
-                  Twitter
+                  Increase Facebook
                   %br Engagement
             .result-block.white
               .result
-                %h5 10k
+                %h5 35%
                 %p
-                  Facebook
+                  Increase Twitter
+                  %br Engagement
+            .result-block.blue
+              .result
+                %h5 60k
+                %p
+                  Short form
+                  %br views
+            .result-block.white
+              .result
+                %h5 2m
+                %p
+                  BBC Rating
                   %br Views
 
