Short form content

--- a/assets/css/global.sass
+++ b/assets/css/global.sass
@@ -15,6 +15,28 @@
   margin: 0 auto
   padding: 0 4%
 
+.information
+  min-height: 200px
+
+@media (max-width: 1300px)
+
+.information
+  min-height: 170px
+
+@media (max-width: 1100px)
+
+  .information
+    min-height: 170px
+
+@media (max-width: 900px)
+
+  .information
+    min-height: 210px
+
+@media (max-width: 700px)
+
+  .information
+    min-height: auto
 
 @media (max-width: 2000px)
   .row
