--- a/views/about.haml
+++ b/views/about.haml
@@ -22,5 +22,5 @@
                 We aren't motivated by profit margins, industry awards or owning swanky Shoreditch offices, we just want to make great stuff and tell great stories and our results show that we are very good at doing just that.
 
             .ten.columns
-              %a.button.button-center
+              %a.button.button-center{:href => "#getInTouch"}
                 Get in touch
