--- a/assets/css/font.sass
+++ b/assets/css/font.sass
@@ -144,6 +144,11 @@ a
   color: white
   letter-spacing: 0.02em
 
+.text-highlight
+  font-family: 'Feature'
+  padding: 0 0.3em
+  font-size: 0.7em
+
 @media (max-width: 2000px)
   .quote-long
     font-size: 1.7em
@@ -222,6 +227,8 @@ a
   .hero-header
     p
       font-size: 3.3em
+
+
 
 @media (max-width: 1100px)
   .result-block
