--- a/views/about.haml
+++ b/views/about.haml
@@ -13,13 +13,23 @@
           .row
             .ten.columns
               %p
-                We are digital film content creators. We are not an agency, nor are we ex TV broadcasters.
+                We are
+                %b.text-highlight digital film content creators
+                We are not a PR agency, nor are we ex TV broadcasters.
 
               %p
-                We are digital natives. We live and breathe social content. Our production serves the stories we tell and the creatives we execute, not the other way around.
+                We are
+                %b.text-highlight digital natives
+                We live and breathe social content. Our production
+                %b.text-highlight serves the stories we tell
+                We are led by story, not by production.
 
               %p
-                We aren't motivated by profit margins, industry awards or owning swanky Shoreditch offices, we just want to make great stuff and tell great stories and our results show that we are very good at doing just that.
+                We aren't
+                %b.text-highlight motivated
+                by profit margins, industry awards or owning swanky Shoreditch offices, we just want to make great stuff and
+                %b.text-highlight tell great stories
+                and we would love to help tell yours.
 
             .ten.columns
               %a.button.button-center{:href => "#getInTouch"}
