--- a/views/case-studies/campaigns/solution_section.haml
+++ b/views/case-studies/campaigns/solution_section.haml
@@ -16,7 +16,7 @@
                 %h2
                   Nuke’em
                 %p
-                  At pitch stage, we provided a strategic approach nicknamed ‘nuke’em’. This was a ‘balls to wall’ approach that looked to invite the audience to express their support for Team GB in a multitude of ways.
+                  At pitch stage, we provided a strategic approach nicknamed ‘nuke’em’. This was a ‘balls to the wall’ approach that looked to invite the audience to express their support for Team GB in a multitude of ways.
 
                 %p
                   We split the UGC options into two separate categories, high commitment and low commitment. This allowed light touch participation as well as more elaborate efforts, giving the audience the ability to decide how they wished to interact with Team GB.
@@ -43,7 +43,7 @@
                 %h2
                   Nuke’em
                 %p
-                  At pitch stage, we provided a strategic approach nicknamed ‘nuke’em’. This was a ‘balls to wall’ approach that looked to invite the audience to express their support for Team GB in a multitude of ways.
+                  At pitch stage, we provided a strategic approach nicknamed ‘nuke’em’. This was a ‘balls to the wall’ approach that looked to invite the audience to express their support for Team GB in a multitude of ways.
 
                 %p
                   We split the UGC options into two separate categories, high commitment and low commitment. This allowed light touch participation as well as more elaborate efforts, giving the audience the ability to decide how they wished to interact with Team GB.
