--- a/views/case-studies/digital-influencer/solution_section.haml
+++ b/views/case-studies/digital-influencer/solution_section.haml
@@ -28,7 +28,7 @@
                     Pre-show
                     \- Building excitement and engagement leading up to the shows pre-record.
                 %p
-                  Content included an Anto Sharp short form piece, a snapchat story of highlights from last year and a mobile optimised re-edit of Arron Crascall previous behind the scenes.
+                  Content included an Anto Sharp short form piece, a snapchat story of highlights from last year and a mobile optimised re-edit of Arron Crascall's previous behind the scenes.
 
               .five.columns
                 .embed-container.squash.media-mobile
@@ -58,7 +58,7 @@
                   %span.small
                     \- Building excitement and engagement leading up to the shows pre-record.
                 %p
-                  Content included an Anto Sharp short form piece, a snapchat story of highlights from last year and a mobile optimised re-edit of Arron Crascall previous behind the scenes.
+                  Content included an Anto Sharp short form piece, a snapchat story of highlights from last year and a mobile optimised re-edit of Arron Crascall's previous behind the scenes.
 
 
               .five.columns
