--- a/views/case-studies/short-form/solution_section.haml
+++ b/views/case-studies/short-form/solution_section.haml
@@ -133,7 +133,7 @@
               %a{"data-lity" => "", :href => "//vimeo.com/212727768"}
                 .clickable-area
                   %h1
-                    max whitlock headstand
+                    Max Whitlock Handstand
             .background-image.image-max-headstand
 
 
