--- a/views/contact.haml
+++ b/views/contact.haml
@@ -14,7 +14,7 @@
       .row.footer-section
         .four.columns
           %h2
-            Contacts us on
+            Contact us on
           %p
             Tel: 020 72414432
             %br
