--- a/views/case-studies/digital-influencer.haml
+++ b/views/case-studies/digital-influencer.haml
@@ -45,3 +45,15 @@
 
     ga('create', 'UA-97411153-1', 'auto');
     ga('send', 'pageview');
+
+
+  / Hotjar Tracking Code for http://www.tanjunmedia.com/
+  :javascript
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:501879,hjsv:5};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
