--- a/assets/css/buttons.sass
+++ b/assets/css/buttons.sass
@@ -13,6 +13,9 @@
 .button-center
   margin: 3em auto
 
+.button-center-short
+  margin: 0 auto
+
 .button:hover
   color: white
   background: $blue
@@ -30,3 +33,7 @@
 @media (max-width: 1300px)
   .button
     padding: 0.15em
+
+@media (max-width: 700px)
+  .button-center-short
+    margin: 2em auto
