--- a/assets/css/sections.sass
+++ b/assets/css/sections.sass
@@ -62,6 +62,11 @@
   .outer
     height: 70%
 
+.blue-block-head-foot
+  height: 48%
+  .outer
+    height: 48%
+
 .blue-block-foot
   .outer
     height: 85%
@@ -76,7 +81,8 @@
 @media (max-width: 900px)
   .sub-section.sub-section-mobile
     .blue-block-head,
-    .blue-block-foot
+    .blue-block-foot,
+    .blue-block-head-foot
       height: 101.2%
 
 @media (max-width: 700px)
