--- a/views/navigation.haml
+++ b/views/navigation.haml
@@ -14,7 +14,9 @@
             %a.mobile-nav-link{:href => "#whatWeCreate"}
               %li.extended What we create
             %a.mobile-nav-link{:href => "#whoWeWorkWith"}
-              %li Who we work with
+              %li Our Clients
+            %a.mobile-nav-link{:href => "#meetTheTeam"}
+              %li Our team
             %a.mobile-nav-link{:href => "#getInTouch"}
               %li Get in touch
             .mobile-nav-link
@@ -34,18 +36,22 @@
   .desktop-nav
     %ul.nav#nav1
       %li
+        %a.extended{:href => "#ourReel"} Our Work
+      %li
         %a{:href => "#whoWeAre"} Who we are
       %li
         %a.extended{:href => "#whatWeCreate"} What we create
 
     %ul.nav.navlogo
       %li
-        %a{:href => "#ourReel"}
+        %a{:href => "#Hero"}
           %img{:src => "/assets/img/CombinationMarkV1Pink.png"}
 
     %ul.nav#nav2
       %li
-        %a{:href => "#whoWeWorkWith"} Who we work with
+        %a{:href => "#whoWeWorkWith"} Our Clients
+      %li
+        %a{:href => "#meetTheTeam"} Our team
       %li
         %a{:href => "#getInTouch"} Get in touch
 
@@ -66,7 +72,9 @@
             %a.mobile-nav-link{:href => "#whatWeCreateNav"}
               %li.extended What we create
             %a.mobile-nav-link{:href => "#whoWeWorkWithNav"}
-              %li Who we work with
+              %li Our Clients
+            %a.mobile-nav-link{:href => "#meetTheTeam"}
+              %li Our team
             %a.mobile-nav-link{:href => "#getInTouchNav"}
               %li Get in touch
             .mobile-nav-link
@@ -84,17 +92,21 @@
   .desktop-nav
     %ul.nav#nav1
       %li
+        %a.extended{:href => "#ourReel"} Our Work
+      %li
         %a{:href => "#whoWeAreNav"} Who we are
       %li
         %a.extended{:href => "#whatWeCreateNav"} What we create
 
     %ul.nav.navlogo
       %li
-        %a{:href => "#ourReelNav"}
+        %a{:href => "#Hero"}
           %img{:src => "/assets/img/CombinationMarkV1Pink.png"}
 
     %ul.nav#nav2
       %li
-        %a{:href => "#whoWeWorkWithNav"} Who we work with
+        %a{:href => "#whoWeWorkWithNav"} Our Clients
+      %li
+        %a{:href => "#meetTheTeamNav"} Our team
       %li
         %a{:href => "#getInTouchNav"} Get in touch
