--- a/assets/application.scss
+++ b/assets/application.scss
@@ -15,5 +15,6 @@
 @import "css/footer";
 @import "css/problem";
 @import "css/case-studies";
+@import "css/team";
 @import "css/fullpage-false";
 @import "css/not-found";
