--- a/views/meet-the-team.haml
+++ b/views/meet-the-team.haml
@@ -1,8 +1,8 @@
 !!!
 %html.fullpage-false
   %head
-    %meta{content: 'text/html; charset=utf-8', 'http-equiv' => 'content-type'}/
-    %meta{:content => 'width=device-width', :name => 'viewport', :'initial-scale' => '1.0'}/
+    %meta{content: "text/html; charset=utf-8", "http-equiv" => "content-type"}/
+    %meta{:content => "width=device-width", :name => "viewport"}/
     %link{:rel => 'apple-touch-icon', :sizes => '57x57', :href => '/assets/favicon/apple-icon-57x57.png' }/
     %link{:rel => 'apple-touch-icon', :sizes => '60x60', :href => '/assets/favicon/apple-icon-60x60.png' }/
     %link{:rel => 'apple-touch-icon', :sizes => '72x72', :href => '/assets/favicon/apple-icon-72x72.png' }/
@@ -17,26 +17,24 @@
     %link{:rel => 'icon', :type => 'image/png', :sizes => '96x96', :href => '/assets/favicon/favicon-96x96.png' }/
     %link{:rel => 'icon', :type => 'image/png', :sizes => '16x16', :href => '/assets/favicon/favicon-16x16.png' }/
     %title Tanjun Media
-    %link{href: '/assets/application.css', rel: 'stylesheet'}/
+    %link{href: '/assets/application.css', rel: "stylesheet"}/
 
   %body
 
     /[if IE]
-      %link{href: '/assets/css/ie.css', rel: 'stylesheet'}/
+      %link{href: '/assets/css/ie.css', rel: "stylesheet"}/
 
-    .page-id#home-page
+    .page-id#meet-the-team
 
-      = haml :navigation
-      = haml :hero
-      = haml :reel
-      = haml :about
-      = haml :work
-      = haml :clients
-      = haml :team
+      = haml :"sub-navigation"
+      = haml :"meet-the-team/who-we-are-not"
+      = haml :"meet-the-team/hiring"
+      = haml :"meet-the-team/who-we-are"
       = haml :contact
 
   %script{ src: 'https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js' }
   %script{ src: '/assets/application.js' }
+
   :javascript
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
